--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <div class="col-fluid"> <!-- Opens Grid Container -->
 
-  <nav class="col-12 float-left">
+  <nav class="col-12 col-xl-2 float-left">
     <ul class="col-12 float-left p-0">
-      <li class="col-2 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#"></a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Blog</a></li>
-      <li><a href="index.html">Contact</a></li>
+      <li class="col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#"></a></li>
+      <li class="col-2 col-xl-12"><a href="index.html">Home</a></li>
+      <li class="col-2 col-xl-12"><a href="index.html">Blog</a></li>
+      <li class="col-2 col-xl-12"><a href="index.html">Contact</a></li>
     </ul>
   </nav>
 
-<article class="col-12 float-left">
+<article class="col-12 col-xl-10 float-left">
 
 <h1 class="col-12 float-left">
 Z2 Design
@@ -36,47 +36,8 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 
 </article>
 
-  <main class="col-12 float-left">
+  <main class="col-12 col-lg-10 float-left float-xl-right">
 
-<!--
-<div class="col-12 p-1 float-left">
-<div class="col-12 float-left item-container">
-  <a href="#"></a>
-  <div class="float-left title-container">
-
-<h2>HEROES</h2>
-<h3>Font Family</h3>
-
-  </div>
-  <img src="images/heroes/heroes-1.png" alt="Heroes Typeface" class="col-12 float-left">
-</div>
-</div>
-
-
-<div class="col-6 p-0 float-left item-container">
-<a href="#"></a>
-<div class="float-left title-container">
-
-<h2>HEROES</h2>
-<h3>Font Family</h3>
-
-</div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface" class="col-12 float-left">
-</div>
-
-
-
-<div class="col-6 p-0 float-left item-container">
-<a href="#"></a>
-<div class="float-left title-container">
-
-<h2>HEROES</h2>
-<h3>Font Family</h3>
-
-</div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface" class="col-12 float-left">
-</div>
--->
 
 <div class="item-container-1">
   <a href="#"></a>
@@ -91,8 +52,8 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <div class="item-container-2">
   <div class="title-container">
     <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
+    <h2>CAFE ICONS</h2>
+    <h3>Icon Set</h3>
   </div>
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
@@ -100,12 +61,38 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <div class="item-container-3">
   <div class="title-container">
     <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
   </div>
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
 
+<div class="item-container-4">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-5">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-6">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
 
   </main>
 
