--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul class="col-12 float-left p-0">
       <li class="col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#"></a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Home</a></li>
+      <li class="col-2 col-xl-12"><a href="index.html">Shop</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Blog</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Contact</a></li>
     </ul>
@@ -36,7 +37,9 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 
 </article>
 
-  <main class="col-12 col-lg-10 float-left float-xl-right">
+<div class="main-container col-xl-10 float-left float-xl-right">
+  <main class="col-12 col-xl-10 offset-xl-1">
+
 
 
 <div class="item-container-1">
@@ -94,8 +97,35 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
 
-  </main>
+<div class="item-container-7">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
 
+<div class="item-container-8">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-9">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+  </main>
+</div>
 </div> <!-- Closes Grid Container -->
 
   <!-- Optional JavaScript -->
