--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link href="css/fonts/stylesheet.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -27,11 +29,11 @@
 
 <article class="col-12 col-xl-10 float-left">
 
-<h1 class="col-12 float-left">
-Z2 Design
+<h1 class="col-12 col-xl-10 offset-xl-1 float-left">
+Z₂ Design
 </h1>
 
-<p class="col-12 float-left">
+<p class="col-12 col-xl-10 offset-xl-1 float-left">
 Available in Rugged, Refined, and Hand-drawn, this font family is inspired by the likes of Knockout!, and Swedish sans-serif, with a rugged, distressed edge.
 </p>
 
@@ -40,7 +42,7 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <div class="main-container col-xl-10 float-left float-xl-right">
   <main class="col-12 col-xl-10 offset-xl-1">
 
-
+<h2>Featured Products</h2>
 
 <div class="item-container-1">
   <a href="#"></a>
@@ -97,32 +99,6 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
 
-<div class="item-container-7">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-8">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-9">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
 
   </main>
 </div>
