--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <nav class="col-12 col-xl-2 float-left">
     <ul class="col-12 float-left p-0">
-      <li class="col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#"></a></li>
-      <li class="col-2 col-xl-12"><a href="index.html">Home</a></li>
+      <li class="logo-container col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
+      <li class="col-2 col-xl-12"><a href="index.html" id="active">Home</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Shop</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Blog</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Contact</a></li>
