--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="col-fluid"> <!-- Opens Grid Container -->
 
   <nav class="col-12 col-xl-2 float-left">
-    <ul class="col-12 float-left p-0">
+    <ul class="col-12 col-xl-6 offset-xl-3 float-left p-0">
       <li class="logo-container col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
       <li class="col-2 col-xl-12"><a href="index.html" id="active">Home</a></li>
       <li class="col-2 col-xl-12"><a href="index.html">Shop</a></li>
@@ -27,7 +27,7 @@
     </ul>
   </nav>
 
-<article class="col-12 col-xl-10 float-left">
+<article class="col-12 col-xl-10 float-left float-xl-right">
 
 <h1 class="col-12 col-xl-10 offset-xl-1 float-left">
 Z₂ Design
