--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
 
 <div class="col-fluid"> <!-- Opens Grid Container -->
 
-  <nav class="col-12 col-xl-2 float-left">
-    <ul class="col-12 col-xl-6 offset-xl-3 float-left p-0">
-      <li class="logo-container col-1 col-xl-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li class="col-2 col-xl-12"><a href="index.html" id="active">Home</a></li>
-      <li class="col-2 col-xl-12"><a href="index.html">Shop</a></li>
-      <li class="col-2 col-xl-12"><a href="index.html">Blog</a></li>
-      <li class="col-2 col-xl-12"><a href="index.html">Contact</a></li>
+  <nav class="col-12 col-lg-2 float-left">
+    <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
+      <li class="logo-container col-1 col-lg-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
+      <li class="col-2 col-lg-12"><a href="index.html" id="active">Home</a></li>
+      <li class="col-2 col-lg-12"><a href="index.html">Shop</a></li>
+      <li class="col-2 col-lg-12"><a href="index.html">Blog</a></li>
+      <li class="col-2 col-lg-12"><a href="index.html">Contact</a></li>
     </ul>
   </nav>
 
-<article class="col-12 col-xl-10 float-left float-xl-right">
+<article class="col-12 col-lg-10 float-left float-lg-right">
 
-<h1 class="col-12 col-xl-10 offset-xl-1 float-left">
+<h1 class="col-12 col-lg-10 offset-lg-1 float-left">
 Z₂ Design
 </h1>
 
-<p class="col-12 col-xl-10 offset-xl-1 float-left">
+<p class="col-12 col-lg-10 offset-lg-1 float-left">
 Available in Rugged, Refined, and Hand-drawn, this font family is inspired by the likes of Knockout!, and Swedish sans-serif, with a rugged, distressed edge.
 </p>
 
 </article>
 
-<div class="main-container col-xl-10 float-left float-xl-right">
-  <main class="col-12 col-xl-10 offset-xl-1">
+<div class="main-container col-lg-10 float-left float-lg-right">
+  <main class="col-12 col-lg-10 offset-lg-1">
 
 <h2>Featured Products</h2>
 
