--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
       <li class="logo-container col-1 col-lg-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
       <li class="col-2 col-lg-12"><a href="index.html" id="active">Home</a></li>
-      <li class="col-2 col-lg-12"><a href="index.html">Shop</a></li>
+      <li class="col-2 col-lg-12"><a href="index.html">Catalog</a></li>
       <li class="col-2 col-lg-12"><a href="index.html">Blog</a></li>
       <li class="col-2 col-lg-12"><a href="index.html">Contact</a></li>
     </ul>
