--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 
   </main>
 </div>
+
+<footer class="col-12 p-0 float-left">
+  <ul class="float-left">
+    <li><a href="#"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
+    <li><a href="#"><img src="images/footer/instagram.svg" alt="link to Instagram"></a></li>
+    <li><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
+  </ul>
+</footer>
+
 </div> <!-- Closes Grid Container -->
 
   <!-- Optional JavaScript -->
