--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       <li class="col-2 col-lg-12"><a href="index.html">Blog</a></li>
       <li class="col-2 col-lg-12"><a href="index.html">Contact</a></li>
     </ul>
+
+    <ul class="social-media-xl float-left col-lg-6 offset-lg-3">
+      <li class="col-12"><a href="#"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
+      <li class="col-12"><a href="#"><img src="images/footer/instagram.svg" alt="link to Instagram"></a></li>
+      <li class="col-12"><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
+    </ul>
   </nav>
 
 <article class="col-12 col-lg-10 float-left float-lg-right">
