--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 <div class="main-container col-lg-10 float-left float-lg-right">
   <main class="col-12 col-lg-10 offset-lg-1">
 
-<h2>Featured Products</h2>
+<h2>FEATURED PRODUCTS</h2>
 
 <div class="item-container-1">
   <a href="#"></a>
