--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
 
     <ul class="social-media-xl float-left col-lg-6 offset-lg-3">
-      <li class="col-12"><a href="#"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
+      <li class="col-12"><a href="https://www.etsy.com/shop/Z2Design?ref=seller-platform-mcnav" target="_blank"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
       <li class="col-12"><a href="#"><img src="images/footer/instagram.svg" alt="link to Instagram"></a></li>
       <li class="col-12"><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
     </ul>
@@ -36,7 +36,7 @@
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
 <h1 class="col-12 col-lg-10 offset-lg-1 float-left">
-Z₂ Design
+Z₂ DESIGN
 </h1>
 
 <p class="col-12 col-lg-10 offset-lg-1 float-left">
@@ -57,16 +57,16 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
     <h2>HEROES</h2>
     <h3>Font Family</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/heroes/heroes-1.png" alt="Heroes Typeface Overview">
 </div>
 
 <div class="item-container-2">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CAFE ICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>OVERLAP</h2>
+    <h3>Font Family</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/overlap/overlap.png" alt="Overlap Typeface Overview">
 </div>
 
 <div class="item-container-3">
@@ -111,7 +111,7 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 
 <footer class="col-12 p-0 float-left">
   <ul class="float-left">
-    <li><a href="#"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
+    <li><a href="https://www.etsy.com/shop/Z2Design?ref=seller-platform-mcnav" target="_blank"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
     <li><a href="#"><img src="images/footer/instagram.svg" alt="link to Instagram"></a></li>
     <li><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
   </ul>
