--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
-<h1 class="col-12 col-lg-10 offset-lg-1 float-left">
+<h1 class="col-12 col-lg-10 offset-lg-1 float-left P-0">
 Z₂ DESIGN
 </h1>
 
-<p class="col-12 col-lg-10 offset-lg-1 float-left">
-Available in Rugged, Refined, and Hand-drawn, this font family is inspired by the likes of Knockout!, and Swedish sans-serif, with a rugged, distressed edge.
+<p class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
 </p>
 
 </article>
@@ -107,6 +107,18 @@ Available in Rugged, Refined, and Hand-drawn, this font family is inspired by th
 
 
   </main>
+</div>
+
+<div class="featured-blogs col-12 col-lg-10 float-left float-lg-right">
+
+<h2 class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+RECENT BLOG POSTS
+</h2>
+
+<p class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
+</p>
+
 </div>
 
 <footer class="col-12 p-0 float-left">
