--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
-<h1 class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+<h1 class="col-12 col-lg-10 offset-lg-1 float-left">
 Z₂ DESIGN
 </h1>
 
-<p class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+<p class="col-12 col-lg-10 offset-lg-1 float-left">
 Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
 </p>
 
@@ -93,7 +93,7 @@ Functional and focused designs for intentional people. In throw-away society fil
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/candicons/candicons.png" alt="#">
 </div>
 
 <div class="item-container-6">
@@ -110,15 +110,16 @@ Functional and focused designs for intentional people. In throw-away society fil
 </div>
 
 <div class="featured-blogs col-12 col-lg-10 float-left float-lg-right">
+  <div class="col-12 float-left">
 
-<h2 class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+<h2 class="col-12 col-lg-10 offset-lg-1 float-left">
 RECENT BLOG POSTS
 </h2>
 
-<p class="col-12 col-lg-10 offset-lg-1 float-left P-0">
+<p class="col-12 col-lg-10 offset-lg-1 float-left">
 Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
 </p>
-
+</div>
 </div>
 
 <footer class="col-12 p-0 float-left">
