--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
-      <li class="logo-container col-1 col-lg-12 float-left p-0"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li class="col-2 col-lg-12"><a href="index.html" id="active">Home</a></li>
-      <li class="col-2 col-lg-12"><a href="index.html">Catalog</a></li>
-      <li class="col-2 col-lg-12"><a href="index.html">Blog</a></li>
-      <li class="col-2 col-lg-12"><a href="index.html">Contact</a></li>
+      <li class="logo-container"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
+      <li><a href="index.html" id="active">Home</a></li>
+      <li><a href="index.html">Catalog</a></li>
+      <li><a href="index.html">Blog</a></li>
+      <li><a href="index.html">Contact</a></li>
     </ul>
 
     <ul class="social-media-xl float-left col-lg-6 offset-lg-3">
@@ -52,7 +52,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-1">
   <div class="title-container">
-    <a href="#"></a>    
+    <a href="#"></a>
     <h2>HEROES</h2>
     <h3>Font Family</h3>
 
