--- a/catalog.html
+++ b/catalog.html
@@ -15,13 +15,13 @@
 
 <body>
 
-<div class="container-fluid"> <!-- Opens Grid Container -->
+<div class="col-fluid"> <!-- Opens Grid Container -->
 
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
       <li class="logo-container"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li><a href="index.html" id="active">Home</a></li>
-      <li><a href="catalog.html">Catalog</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="catalog.html" id="active">Catalog</a></li>
       <li><a href="index.html">Blog</a></li>
       <li><a href="index.html">Contact</a></li>
     </ul>
@@ -36,7 +36,7 @@
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
 <h1 class="col-12 col-lg-10 offset-lg-1 float-left">
-Z₂ DESIGN
+CATALOG
 </h1>
 
 <p class="col-12 col-lg-10 offset-lg-1 float-left">
@@ -105,54 +105,19 @@ Functional and focused designs for intentional people. In throw-away society fil
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
 
-
   </main>
 </div>
 
-<div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
-  <div class="featured-blogs float-left">
+<div class="featured-blogs col-12 col-lg-10 float-left float-lg-right">
+  <div class="col-12 float-left">
 
-<h2>
+<h2 class="col-12 col-lg-10 offset-lg-1 float-left">
 RECENT BLOG POSTS
 </h2>
 
-<div class="item-container-1">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
-
-  </div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface Overview">
-</div>
-
-<div class="item-container-2">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>OVERLAP</h2>
-    <h3>Font Family</h3>
-  </div>
-<img src="images/overlap/overlap.png" alt="Overlap Typeface Overview">
-</div>
-
-<div class="item-container-3">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-4">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
+<p class="col-12 col-lg-10 offset-lg-1 float-left">
+Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
+</p>
 </div>
 </div>
 
