--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 </div>
 
 <div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
-  <div class="featured-blogs float-left">
+  <div class="featured-blogs float-left" id="featured-blogs">
 
 <h2>
 RECENT BLOG POSTS
