--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 </article>
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-lg-10 offset-lg-1">
+  <main class="col-12 col-lg-12 ">
 
 <h2>FEATURED PRODUCTS</h2>
 
