--- a/catalog.html
+++ b/catalog.html
@@ -123,16 +123,21 @@ Functional and focused designs for intentional people. In throw-away society fil
   <div class="modal-dialog" id="modal">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Heroes Font Family</h5>
 
 
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body col-12">
 
+
+<div class="col-12 col-lg-6 float-left"> <!-- MODAL BODY CONTAINER-1 -->
         <!-- HEROES TYPEFACE -->
+        <p class="col-12 float-left p-0">
+          This industrial style sans serif typeface means business. Inpired by the likes of "Knockout!" and Swedish type, this is meant to add urgency to your message. Designed during the Black Lives Matter protests and Covid-19 pandemic of 2020, it was designed as a tool to help spread a message of hope and solidarity for those disenfranchised.
+        </p>
                 <div id='product-component-1594140064166'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
@@ -228,14 +233,27 @@ Functional and focused designs for intentional people. In throw-away society fil
               </script>
 
                 <!-- END HEROES TYPEFACE -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      </div><!-- CLOSES MODAL BODY CONTAINER-1 -->
+
+
+
+      <div class="col-12 col-lg-6 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
+      </div><!-- CLOSES MODAL BODY CONTAINER-2-->
+
+
+    
     </div>
   </div>
 </div>
+    </div>
+
+
 
 
 
