--- a/catalog.html
+++ b/catalog.html
@@ -49,11 +49,11 @@ Functional and focused designs for intentional people. In throw-away society fil
 </article>
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-lg-12 ">
+  <main class="col-12 col-lg-12" id="main-catalog">
 
-<h2>FEATURED PRODUCTS</h2>
+<h2>ALL PRODUCTS</h2>
 
-<div class="item-container-1" data-toggle="modal" data-target="#exampleModal">
+<div class="item-container-1" data-toggle="modal" data-target="#heroes">
   <div class="title-container">
     <a href="#"></a>
     <h2>HEROES</h2>
@@ -119,7 +119,7 @@ Functional and focused designs for intentional people. In throw-away society fil
  -->
 
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="heroes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" id="modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -138,7 +138,7 @@ Functional and focused designs for intentional people. In throw-away society fil
         <p class="col-12 float-left p-0">
           This industrial style sans serif typeface means business. Inpired by the likes of "Knockout!" and Swedish type, this is meant to add urgency to your message. Designed during the Black Lives Matter protests and Covid-19 pandemic of 2020, it was designed as a tool to help spread a message of hope and solidarity for those disenfranchised.
         </p>
-                <div id='product-component-1594140064166'></div>
+                <div id='product-component-1594140064166' class="col-12 float-left p-0"></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -246,8 +246,6 @@ Functional and focused designs for intentional people. In throw-away society fil
         <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
       </div><!-- CLOSES MODAL BODY CONTAINER-2-->
 
-
-    
     </div>
   </div>
 </div>
