--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 </article>
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-lg-12 ">
+  <main class="col-12 col-lg-12" id="main-home">
 
 <h2>FEATURED PRODUCTS</h2>
 
