--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
 <h1 class="col-12 col-lg-10 offset-lg-1 float-left">
-Z₂ DESIGN
+CATALOG
 </h1>
 
 <p class="col-12 col-lg-10 offset-lg-1 float-left">
@@ -49,7 +49,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 </article>
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-lg-12" id="main-catalog">
+  <main class="col-12" id="main-catalog">
 
 <h2>ALL PRODUCTS</h2>
 
@@ -108,6 +108,59 @@ Functional and focused designs for intentional people. In throw-away society fil
 <img src="images/heroes/heroes-1.png" alt="#">
 </div>
 
+<div class="item-container-7">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-8">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-9">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-10">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-11">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
+
+<div class="item-container-12">
+  <div class="title-container">
+    <a href="#"></a>
+    <h2>CANDICONS</h2>
+    <h3>Icon Set</h3>
+  </div>
+<img src="images/heroes/heroes-1.png" alt="#">
+</div>
 
   </main>
 </div>
