--- a/fonts.html
+++ b/fonts.html
@@ -42,8 +42,8 @@
 
 <h1>CATALOG</h1>
 <ul>
-  <li><a href="catalog.html" id="active-category">ALL</a></li>
-  <li><a href="fonts.html">FONTS</a></li>
+  <li><a href="catalog.html">ALL</a></li>
+  <li><a href="fonts.html" id="active-category">FONTS</a></li>
   <li><a href="#">SKETCHBOOKS</a></li>
   <li><a href="#">APPAREL</a></li>
 </ul>
@@ -358,6 +358,12 @@ RECENT BLOG POSTS
     <li><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
   </ul>
 </footer>
+
+<script src="js/jquery.2.min.js"></script>
+<script src="js/jquery.mixitup.min.js"></script>
+<script>
+    $('.containMix').mixItUp();
+</script>
 
 </div> <!-- Closes Grid Container -->
 
