--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
 
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="container-mixitup containMix col-12 col-lg-10 offset-lg-1" id="main-catalog">
+  <main class="col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-catalog">
 
 <h1>CATALOG</h1>
 <ul>
@@ -73,7 +73,7 @@
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/candicons/candicons.png" alt="#">
 </div>
 
 <div class="item-container-4">
