--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
 <article class="col-12 col-lg-10 float-left float-lg-right">
 
-<h1 class="col-12 col-lg-10 offset-lg-1 float-left">
+<h1 class="col-12 col-lg-10 offset-lg-1 float-left p-xl-0">
 Z₂ DESIGN
 </h1>
 
-<p class="col-12 col-lg-10 offset-lg-1 float-left">
+<p class="col-12 col-lg-10 offset-lg-1 float-left p-xl-0">
 Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
 </p>
 
 </article>
 
 <div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-lg-10 offset-lg-1" id="main-home">
+  <main class="col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-home">
 
 <h2>FEATURED PRODUCTS</h2>
 
