--- a/catalog.html
+++ b/catalog.html
@@ -78,7 +78,7 @@
 
 <div class="item-container-4">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="heroes.html"></a>
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
@@ -167,143 +167,6 @@
  -->
 
 
-<div class="modal fade" id="heroes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" id="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Heroes Font Family</h5>
-
-
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body col-12">
-
-
-<div class="col-12 col-lg-6 float-left"> <!-- MODAL BODY CONTAINER-1 -->
-        <!-- HEROES TYPEFACE -->
-        <p class="col-12 float-left p-0">
-          This industrial style sans serif typeface means business. Inpired by the likes of "Knockout!" and Swedish type, this is meant to add urgency to your message. Designed during the Black Lives Matter protests and Covid-19 pandemic of 2020, it was designed as a tool to help spread a message of hope and solidarity for those disenfranchised.
-        </p>
-                <div id='product-component-1594140064166' class="col-12 float-left p-0"></div>
-              <script type="text/javascript">
-              /*<![CDATA[*/
-              (function () {
-                var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-                if (window.ShopifyBuy) {
-                  if (window.ShopifyBuy.UI) {
-                    ShopifyBuyInit();
-                  } else {
-                    loadScript();
-                  }
-                } else {
-                  loadScript();
-                }
-                function loadScript() {
-                  var script = document.createElement('script');
-                  script.async = true;
-                  script.src = scriptURL;
-                  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-                  script.onload = ShopifyBuyInit;
-                }
-                function ShopifyBuyInit() {
-                  var client = ShopifyBuy.buildClient({
-                    domain: 'z2-design-studio.myshopify.com',
-                    storefrontAccessToken: '6cf677fb0540a098e4f782c9b3a29eb2',
-                  });
-                  ShopifyBuy.UI.onReady(client).then(function (ui) {
-                    ui.createComponent('product', {
-                      id: '5422125383844',
-                      node: document.getElementById('product-component-1594140064166'),
-                      moneyFormat: '%24%7B%7Bamount%7D%7D',
-                      options: {
-                "product": {
-                  "styles": {
-                    "product": {
-                      "@media (min-width: 601px)": {
-                        "max-width": "calc(25% - 20px)",
-                        "margin-left": "20px",
-                        "margin-bottom": "50px"
-                      }
-                    }
-                  },
-                  "contents": {
-                    "img": false,
-                    "title": false,
-                    "price": false
-                  },
-                  "text": {
-                    "button": "Add to cart"
-                  }
-                },
-                "productSet": {
-                  "styles": {
-                    "products": {
-                      "@media (min-width: 601px)": {
-                        "margin-left": "-20px"
-                      }
-                    }
-                  }
-                },
-                "modalProduct": {
-                  "contents": {
-                    "img": false,
-                    "imgWithCarousel": true,
-                    "button": false,
-                    "buttonWithQuantity": true
-                  },
-                  "styles": {
-                    "product": {
-                      "@media (min-width: 601px)": {
-                        "max-width": "100%",
-                        "margin-left": "0px",
-                        "margin-bottom": "0px"
-                      }
-                    }
-                  },
-                  "text": {
-                    "button": "Add to cart"
-                  }
-                },
-                "cart": {
-                  "text": {
-                    "total": "Subtotal",
-                    "button": "Checkout"
-                  }
-                }
-              },
-                    });
-                  });
-                }
-              })();
-              /*]]>*/
-              </script>
-
-                <!-- END HEROES TYPEFACE -->
-      </div><!-- CLOSES MODAL BODY CONTAINER-1 -->
-
-
-
-      <div class="col-12 col-lg-6 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-        <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
-      </div><!-- CLOSES MODAL BODY CONTAINER-2-->
-
-    </div>
-  </div>
-</div>
-    </div>
-
-
-
-
-
-
 <div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
   <div class="featured-blogs float-left" id="featured-blogs">
 
@@ -358,6 +221,42 @@ RECENT BLOG POSTS
     <li><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
   </ul>
 </footer>
+
+
+
+<!-- MODALS -->
+
+<!-- HEROES MODAL -->
+
+<div class="modal fade" id="heroes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" id="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Heroes Font Family</h5>
+
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body col-12">
+
+
+
+
+                <!-- END HEROES TYPEFACE -->
+      </div><!-- CLOSES MODAL BODY CONTAINER-1 -->
+
+
+
+
+
+    </div>
+  </div>
+</div>
+    </div>
+
+    <!-- CLOSES HEROES MODAL -->
 
 </div> <!-- Closes Grid Container -->
 
