--- a/heroes.html
+++ b/heroes.html
@@ -56,6 +56,12 @@
             <textarea placeholder="HEROES BOLD CONDENSED REFINED" class="heroes-condensed-bold-refined col-12 p-0"></textarea>
             <textarea placeholder="HEROES BOLD CONDENSED RUGGED" class="heroes-condensed-bold-rugged col-12 p-0"></textarea>
             <textarea placeholder="HEROES BOLD CONDENSED HAND-DRAWN" class="heroes-condensed-bold-rugged col-12 p-0"></textarea>
+
+            <form class="col-12 float-left">
+              <textarea id="a" value="50"></textarea>
+              <output name="x" for="a"></output>
+            </form>
+
             </div>
 
                     <div id='product-component-1594140064166' class="col-12 float-left p-0"></div>
@@ -153,7 +159,7 @@
                   </script>
                   </div>
 
-                  <div class="col-12 col-lg-6 offset-xl-1 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
+                  <div class="photo-container col-12 col-lg-6 offset-xl-1 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
